--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "poc-scot",
   "version": "0.0.1",
   "private": true,
+  "author": "Cristiano G Joao - https://github.com/CristianoGil",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CristianoGil/poc-scot.git"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -15,6 +20,7 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@ionic/cli": "^6.19.0",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "core-js": "^3.6.5",
@@ -44,5 +50,5 @@
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
   },
-  "description": "An Ionic project"
+  "description": "SCoT - Sistema de Contra-ordenaçôes de Transito"
 }
