--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
     "@ionic/cli": "^6.19.0",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "node-sass": "^7.0.1",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
+    "underscore": "^1.13.2",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@capacitor/cli": "3.4.3",
     "@types/jest": "^27.0.2",
+    "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
