--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@ionic/cli": "^6.19.0",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@types/html2canvas": "^1.0.0",
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
+    "jspdf": "^2.5.1",
     "node-sass": "^7.0.1",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
