--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic/vue-router": "^6.0.0",
     "@types/html2canvas": "^1.0.0",
     "axios": "^0.26.1",
+    "check-internet-connected": "^2.0.5",
     "core-js": "^3.6.5",
     "jspdf": "^2.5.1",
     "node-sass": "^7.0.1",
