--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "poc-scot",
   "version": "0.0.1",
   "private": true,
+  "description": "SCoT - Sistema de Contra-ordenaçôes de Transito",
   "author": "Cristiano G Joao - https://github.com/CristianoGil",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CristianoGil/poc-scot.git"
-  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -29,6 +26,7 @@
     "core-js": "^3.6.5",
     "jspdf": "^2.5.1",
     "node-sass": "^7.0.1",
+    "register-service-worker": "^1.7.2",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
     "underscore": "^1.13.2",
@@ -44,6 +42,7 @@
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
+    "@vue/cli-plugin-pwa": "^5.0.4",
     "@vue/cli-plugin-router": "~5.0.0-rc.1",
     "@vue/cli-plugin-typescript": "~5.0.0-rc.1",
     "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
@@ -59,5 +58,8 @@
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
   },
-  "description": "SCoT - Sistema de Contra-ordenaçôes de Transito"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CristianoGil/poc-scot.git"
+  }
 }
