--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@awesome-cordova-plugins/network": "^5.41.0",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.4.3",
     "@capacitor/haptics": "1.1.4",
@@ -21,9 +22,12 @@
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "@types/html2canvas": "^1.0.0",
+    "@types/node": "^17.0.23",
+    "@vueuse/core": "^8.2.5",
     "axios": "^0.26.1",
-    "check-internet-connected": "^2.0.5",
+    "cordova-plugin-network-information": "^3.0.0",
     "core-js": "^3.6.5",
+    "dns-socket": "^4.2.2",
     "jspdf": "^2.5.1",
     "node-sass": "^7.0.1",
     "register-service-worker": "^1.7.2",
@@ -35,7 +39,9 @@
   },
   "devDependencies": {
     "@capacitor/cli": "3.4.3",
+    "@types/dns2": "^2.0.1",
     "@types/jest": "^27.0.2",
+    "@types/request": "^2.48.8",
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
