--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "preview": "vue-cli-service preview",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
@@ -14,15 +15,18 @@
   "dependencies": {
     "@awesome-cordova-plugins/network": "^5.41.0",
     "@capacitor/app": "1.1.1",
+    "@capacitor/browser": "1.0.7",
     "@capacitor/core": "3.4.3",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
+    "@capacitor/splash-screen": "^1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/cli": "^6.19.0",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "@types/html2canvas": "^1.0.0",
     "@types/node": "^17.0.23",
+    "@vue/compiler-dom": "^3.2.32",
     "@vueuse/core": "^8.2.5",
     "axios": "^0.26.1",
     "cordova-plugin-network-information": "^3.0.0",
