--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/splash-screen": "^1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/cli": "^6.19.0",
+    "@ionic/pwa-elements": "^3.1.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "@types/html2canvas": "^1.0.0",
